--- a/extension.properties
+++ b/extension.properties
@@ -1,5 +1,5 @@
-name=@extname@
-description=The extension description can be customized by editing the extension.properties file.
+name=Dsp1LoaderGhidra
+description=A 3DS DSP Binary Loader for Ghidra
 author=
 createdOn=
-version=@extversion@
+version=10.3.3
